syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/carg/pb";

message AddItemRequest {
  string sessionId = 1;
  int64 producId = 2;
  int32 quantity = 3;
}
