syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";
import "rpc_add_item.proto";
import "rpc_clear_cart.proto";
import "rpc_get_cart.proto";

option go_package = "github.com/Arthur199212/microservices-demo/src/carg/pb";

service Cart {
  rpc AddItem (AddItemRequest) returns (google.protobuf.Empty) {}

  rpc ClearCart (ClearCartRequest) returns (google.protobuf.Empty) {}

  rpc GetCart (GetCartRequest) returns (GetCartResponse) {}
}
